dist/1.0/bin/sample/retrieveUnpackaged/objects/Bank_Data__c.object
<CustomObject>
    <description>Information about banks used on Billing Accounts</description>
    <fields>
        <fullName>Bank_Code__c</fullName>
        <label>Bank Code</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country of the Bank origin</description>
        <inlineHelpText>Country of the Bank origin</inlineHelpText>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovakia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SWIFT__c</fullName>
        <description>SWIFT Code of the Bank</description>
        <inlineHelpText>SWIFT Code of the Bank</inlineHelpText>
        <label>SWIFT</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Bank Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Bank_Code__c</columns>
        <columns>Country__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>K&amp;H</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bank name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Banks Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>